# multifast

./: .gitignore  CMakeLists.txt  README  TODO
ahocorasick/: CMakeLists.txt  ahocorasick.c  ahocorasick.h  dict.c  dict.h
examples/example0/: README
examples/example1/: README
examples/example2/: README
examples/example3/: README
examples/example4/: README
examples/example5/: README  example5.c
examples/example6/: example6.c
examples/example7/: README  example7.c  patterns.txt
tester/: CMakeLists.txt
